fix: button text wrap

--- a/src/app/pages/details/pages/details/details.component.scss
+++ b/src/app/pages/details/pages/details/details.component.scss
@@ -50,6 +50,10 @@
   vertical-align: top;
 }
 
+.wrap-text {
+  white-space: normal;
+}
+
 .align-top {
   margin-top: -4px;
 }
